# chatbot

./: .gitignore  README.md  docker-compose.yml
.specify/memory/: constitution.md
agents/: mcp-executor.md  plan-executor.md  plan-validator.md  task-planner.md  todo-chatbot-agent.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/src/: errors.py  main.py
backend/src/agent/: __init__.py  chat_agent.py  prompts.py
backend/src/api/: __init__.py  chat.py  health.py
backend/src/auth/: __init__.py  better_auth.py
backend/src/db/: __init__.py  connection.py
backend/src/db/migrations/: env.py
backend/src/db/migrations/versions/: 001_initial_schema.py
backend/src/mcp/: __init__.py  http_handler.py  server.py
backend/src/mcp/tools/: __init__.py  add_task.py  complete_task.py  delete_task.py  list_tasks.py  update_task.py
backend/src/models/: __init__.py  conversation.py  message.py  task.py
backend/src/utils/: __init__.py  error_handler.py
frontend/: .env.example  .env.local.example  Dockerfile  README.md  package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/components/: ChatInterface.tsx
history/prompts/001-todo-ai-chatbot/: 002-todo-ai-chatbot-specification.spec.prompt.md  003-todo-ai-chatbot-implementation-plan.plan.prompt.md  004-todo-ai-chatbot-task-generation.tasks.prompt.md
k8s/: README.md
k8s/helm/todo-chatbot/: Chart.yaml  values-minikube.yaml  values.yaml  (+1 more)
k8s/scripts/: build-images.sh  deploy.sh  teardown.sh
specs/001-todo-ai-chatbot/: plan.md  spec.md  tasks.md
(+17 files in other folders)
